# Delamain

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: __init__.py  protocol.py  redis_bus.py  schemas.py  server.py  sim_adapter.py  tesla_adapter.py
data/: __init__.py
data/scripts/: __init__.py  download.py  eda.py  preprocess.py
data/zones/: manhattan_zones.geojson  zone_centroids.csv  zone_distances.npz  zone_mapping.json  zone_travel_times.npz
eval/: __init__.py  compare.py  run_baseline.py  run_heuristic.py  run_rl.py
forecasting/: __init__.py  evaluate.py  features.py  model.py  train.py
interface/: __init__.py  app.py  styles.py
interface/components/: chat.py  comparison.py  map_view.py  metrics_panel.py
optimizer/: __init__.py  baseline.py  heuristic.py  rl_agent.py
orchestrator/: __init__.py  agent.py  planner.py  prompts.py  ticker.py  tools.py
simulation/: __init__.py  city.py  demand.py  env.py  metrics.py  runner.py  snapshot.py
tests/: __init__.py  test_api.py  test_city.py  test_data.py  test_demand.py  test_env.py  test_forecasting.py  test_metrics.py  test_optimizer.py  test_snapshot.py
