[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delamain"
version = "0.1.0"
description = "Autonomous Fleet Orchestration Intelligence"
requires-python = ">=3.11"
dependencies = [
    # Data
    "polars>=1.0",
    "pyarrow>=15.0",
    "geopandas>=0.14",
    "shapely>=2.0",

    # ML
    "lightgbm>=4.3",
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.4",

    # Agent
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "redis>=5.0",
    "httpx>=0.27",
    "apscheduler>=3.10",

    # Dashboard
    "streamlit>=1.37",
    "pydeck>=0.9",

    # Utilities
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
    "tensorboard>=2.16",
]

[tool.setuptools.packages.find]
include = [
    "simulation*",
    "forecasting*",
    "optimizer*",
    "api*",
    "orchestrator*",
    "interface*",
    "eval*",
    "data*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
